Figure out responsive embeds

--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -52,13 +52,16 @@ const { frontmatter } = Astro.props;
     margin: 8px 0;
   }
   figcaption {
-    font-size: 12px;
+    font-size: 13px;
   }
   .cap-credit {
     font-style: italic;
   }
   .origin {
     margin: 6px 0 0 0;
+  }
+  .blog-slot {
+    width: 100%;
   }
   .tag-index-container {
     display: flex;
