--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -179,6 +179,9 @@ h1 {
   border-radius: 3px;
   box-shadow: 0 0 4px rgb(64, 64, 64);
 }
+blockquote > p > em {
+  font-size: 1.3rem;
+}
 .youtube-embed {
   width: 100%;
   aspect-ratio: 1.78;
