Update to dietician title

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,7 +4,7 @@
     <a href="/about">About</a>
     <a href="/athlete">Athlete</a>
     <a href="/gallery">Gallery</a>
-    <a href="/nutrition">Nutrition</a>
+    <a href="/dietician">Dietician</a>
     <a href="/content">Content</a>
     <a href="/contact">Contact</a>
   </div>
