Try another version of arrow to view more

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -170,11 +170,11 @@ const psycho = "../src/images/gallery/psycho.jpg";
     justify-content: center;
   }
   .more-wrapper > a > p {
-    display: none;
+    visibility: hidden;
     transition: 0.5s ease-in;
   }
   .more-wrapper > a:hover p {
-    display: block;
+    visibility: visible;
   }
   .more-wrapper > a > img {
     height: 60px;
