Rename page titles

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const pageTitle = "About Amity"
+const pageTitle = "Amity | About"
 const image = {
   url: "../src/images/gallery/Shaffer_Taylor-17.Lite.jpg",
   position: '22% top',
