--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -10,7 +10,7 @@ const image = {
 }
 ---
 
-<BaseLayout pageTitle="Amity the Athlete" img={image}>
+<BaseLayout pageTitle="Amity | Athlete" img={image}>
   <div class="athlete-spacer">
     <div class="athlete-title">
       <p class="athlete-title-one">PRO</p>
