--- a/src/pages/dietician.astro
+++ b/src/pages/dietician.astro
@@ -35,7 +35,7 @@ const fuel = [
 ]
 ---
 
-<BaseLayout pageTitle="Dietician" img={image}>
+<BaseLayout pageTitle="Amity | Dietician" img={image}>
   <div class="nutrition-wrapper">
     <div class="nutrition-container">
       <h1 class="dietician-title animate-title">Dietician</h1>
