--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -9,13 +9,13 @@ const sortedPosts = [...allPosts].sort((a, b) => {
   return +new Date(b.frontmatter.pubDate) - +new Date(a.frontmatter.pubDate)
 });
 const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
-const pageTitle = "Content";
+const pageTitle = "Amity | Content";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div class="content-wrapper">
     <div class="content-container">
-      <h1 class="content-title">{pageTitle}</h1>
+      <h1 class="content-title">Content</h1>
       <p>Stories, Recipies, Podcasts and More!</p>
       <div class="tags-container">
         <div class="arrow-container">Search by tags:
