--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -10,7 +10,7 @@ import '../styles/global.css';
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
     <script src="../scripts/menu.js" />
-		<title>Gallery</title>
+		<title>Amity | Gallery</title>
 	</head>
 	<body>
     <div class="gallery-header-wrapper visible">
