Update dietician, add text to home dietician

--- a/src/pages/dietician.astro
+++ b/src/pages/dietician.astro
@@ -84,7 +84,7 @@ const fuel = [
           <li>Kendall Reagan Nutrition Center, an outpatient clinic in Fort Collins with a focus on eating disorder care</li>
           <li>The Vegetable Connection, a nonprofit that helps families access nutritious, locally grown food, provides nutrition education and hosts cooking classes</li>
         </ul>
-        <p>I'm preparing to take the Registered Dietician exam (spring 2023).</p>
+        <p>I passed the Registered Dietician exam (spring 2023).</p>
       </div>
     </div>
   </div>
