--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,6 +74,7 @@ const psycho = "../src/images/gallery/psycho.jpg";
         <div class="dietician-content-simple">
           <h1>Dietician</h1>
           <h3>Fuel Well to Perform Well</h3>
+          <p>I want to help <em>you</em> develop a sustainable approach to fueling that empowers you in your athletic performance and encourages long-term health.</p>
           <p>Accepting clients for nutrition counseling!</p>
           <div class="dietician more-wrapper">
             <a href="/dietician">
