Fix dietitian spelling, style home dietitian block

--- a/src/pages/dietician.astro
+++ b/src/pages/dietician.astro
@@ -35,10 +35,10 @@ const fuel = [
 ]
 ---
 
-<BaseLayout pageTitle="Amity | Dietician" img={image}>
+<BaseLayout pageTitle="Amity | Dietitian" img={image}>
   <div class="nutrition-wrapper">
     <div class="nutrition-container">
-      <h1 class="dietician-title animate-title">Dietician</h1>
+      <h1 class="dietician-title animate-title">Dietitian</h1>
       <div class="nutrition-intro-container">
         <p>I'm passionate about helping fellow athletes understand their fueling needs and using nutrition to maximize performance and promote long-term health.</p>
       </div>
@@ -80,11 +80,11 @@ const fuel = [
         <p>I have a Master's in Sports Nutrition from the University of Colorado in Colorado Springs (December 2021).</p>
         <p>In 2022, I completed 1000 supervised practice hours, split between the following organizations:</p>
         <ul class="creds-list">
-          <li>Phoenix Suns, an NBA team, assisting the team dietician in providing performance nutrition support for the athletes</li>
+          <li>Phoenix Suns, an NBA team, assisting the team dietitian in providing performance nutrition support for the athletes</li>
           <li>Kendall Reagan Nutrition Center, an outpatient clinic in Fort Collins with a focus on eating disorder care</li>
           <li>The Vegetable Connection, a nonprofit that helps families access nutritious, locally grown food, provides nutrition education and hosts cooking classes</li>
         </ul>
-        <p>I passed the Registered Dietician exam (spring 2023).</p>
+        <p>I passed the Registered Dietitian exam (spring 2023).</p>
       </div>
     </div>
   </div>
