--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -258,4 +258,15 @@ const psycho = "../src/images/gallery/psycho.jpg";
   .bg-img2 {
     background-image: url(../src/images/gallery/JohnnyLat.jpg);
   }
+  @media screen and (min-width: 770px) {
+    .home-title-wrapper {
+      min-height: calc(100vh - 90px);
+    }
+    .home-title-content {
+      margin: 25vh 0 0 10vw;
+    }
+    .home-title-content > h1 {
+      font-size: 64px;
+    }
+  }
 </style>
