--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -212,6 +212,9 @@ iframe.instagram-media {
 }
 
 @media screen and (min-width: 770px) {
+  header {
+    height: 90px;
+  }
   .nav-links {
     display: flex;
     flex-direction: row;
