Add home image for desktop view

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ const image = {
 <BaseLayout pageTitle={pageTitle} img={image}>
   <div class="about-wrapper">
     <div class="about-initial">
-      <h1 class="about-animate">{pageTitle}</h1>
+      <h1 class="about-animate">About Amity</h1>
       <p>You'll often find me exceedingly stoked and always in motion, often rock climbing. I'm constantly pursuing the next big adventure.</p>
       <p>My secret climbing superpower is trying REALLY hard - I don’t give up!</p>
       <p>Feel free to say hi if you ever see me around!!</p>
@@ -74,6 +74,9 @@ const image = {
   }
   .about-nutrition {
     border-radius: 0 0 3px 3px;
+  }
+  h1 {
+    font-family: "Unbound";
   }
   h1, h2 {
     width: fit-content;
