Small edits for styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -151,7 +151,7 @@ const psycho = "../src/images/gallery/psycho.jpg";
   }
   .athlete-content-simple > h1,
   .dietician-content-simple > h1 {
-    margin: 0;
+    margin: 1rem 0 0 0;
     text-transform: uppercase;
     font-weight: 700;
   }
@@ -288,7 +288,6 @@ const psycho = "../src/images/gallery/psycho.jpg";
     .athlete-content-simple > h1,
     .athlete-content-simple > h2,
     .achieve-container,
-    .more-wrapper,
     .dietician-content-simple > h1,
     .dietician-content-simple > h3,
     .dietician-text,
