--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import Hamburger from "./Hamburger.astro";
 import Nav from "./Nav.astro";
 ---
 
-<header>
+<header id="top">
   <div class="mobile-box">
     <h1 class="header-name">Amity Warme</h1>
     <Hamburger />
