--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,15 +1,19 @@
 ---
-const { platform, username } = Astro.props;
+const { platform, username, image } = Astro.props;
 ---
 
-<a href={`https://www.${platform}.com/${username}`} target="_blank" rel="noreferrer">{platform}</a>
+<a href={`https://www.${platform}.com/${username}`} target="_blank" rel="noreferrer">
+  <img class="sm-icon" src={image} alt={platform} >
+</a>
 
 <style>
   a {
-    padding: 0.5rem 1rem;
-    color: white;
-    background-color: #4c1d95;
-    border-radius: 3px;
     text-decoration: none;
+  }
+  img {
+    height: 50px;
+    background-color: rgb(254, 7, 62);
+    padding: 0.5rem 1rem;
+    border-radius: 3px;
   }
 </style>
