Style footer, change image fill color

--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -12,7 +12,7 @@ const { platform, username, image } = Astro.props;
   }
   img {
     height: 50px;
-    background-color: rgb(254, 7, 62);
+    /* background-color: rgb(254, 7, 62); */
     padding: 0.5rem 1rem;
     border-radius: 3px;
   }
