--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,12 +10,17 @@ const fb = "../src/images/icons/facebook.svg"
     <Social platform="instagram" username="amity.warme" image={insta} />
     <Social platform="facebook" username="amity.martin" image={fb} />
   </div>
+  <div class="copyright">Copyright &#169 2023 Sendy Nutrition LLC</div>
 </footer>
 
 <style>
   footer {
-    background-color: rgb(64, 64, 64);
+    /* background-color: rgb(64, 64, 64); */
+    background-color: whitesmoke;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 2rem;
     width: 100%;
   }
