--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -102,6 +102,7 @@ const sponsors = [
     width: 100vw;
     text-align: center;
     padding: 4vh 0;
+    margin: 15vh 0 25vh 0;
   }
   h2 {
     text-transform: uppercase;
