--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -32,7 +32,7 @@ const { frontmatter } = Astro.props;
 </BaseLayout>
 <style>
   .blog-wrapper {
-    margin-top: 50vh; 
+    margin: 50vh 0; 
   }
   .blog-container {
     background-color: rgb(245, 245, 245);
