--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -74,6 +74,7 @@ const image = {
   }
   .about-nutrition {
     border-radius: 0 0 3px 3px;
+    margin-bottom: 35vh;
   }
   h1 {
     font-family: "Unbound";
