--- a/src/pages/dietitian.astro
+++ b/src/pages/dietitian.astro
@@ -92,7 +92,7 @@ const fuel = [
 <style>
   .nutrition-wrapper {
     display: block;
-    margin-top: 55vh;
+    margin: 55vh 0 35vh 0;
   }
   .nutrition-container {
     display: flex;
