--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -142,7 +142,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 1.5rem;
+  padding: 0 1.5rem 1.5rem 1.5rem;
   box-shadow: 0 0 3px rgb(64, 64, 64);
   border-radius: 3px;
   max-width: 575px;
